--- a/index.html
+++ b/index.html
@@ -2,72 +2,10 @@
 <html lang='en'>
   <head>
     <title>Widgets Test</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
+    <script src="./src/ops-widgets.js" type="text/javascript"></script>
   </head>
   <body>
-    <molecule-viz object="aspirin" style="display: none;">{{smiles}}</molecule-viz>
-
-    <script type="text/javascript">
-       var ldaBaseURL = "http://beta.openphacts.org/1.3";
-       var appID = "d46faee5";
-       var appKey = "99689be2999fc97bfe0219d33d964a5e";
-       $(document).ready(function(){
-           var handlebarsURL="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js";
-           var opsJSURL="https://raw.github.com/openphacts/ops.js/master/src/combined.js";
-           $.getScript( handlebarsURL, function( data, textStatus, jqxhr ) {
-               $.getScript( opsJSURL, function( data, textStatus, jqxhr ) {
-                   var moleculeArea = $('molecule-viz')[0];
-                   var value = $(moleculeArea).attr('object');
-                   var cwSearcher = new Openphacts.ConceptWikiSearch(ldaBaseURL, appID, appKey); 
-	               var cwCompoundCallback=function(success, status, response){
-                       if(success && response) {
-                         var results = cwSearcher.parseResponse(response);
-                         $.each(results, function(index, result) {
-                             var found = false;
-                             if ($.isArray(result.prefLabel)) {
-                               $.each(result.prefLabel, function(index, label) {
-                               if (label.toLowerCase() === value.toLowerCase() && found ==false) {
-                               found = true;
-	                           var compoundCallback=function(success, status, response){  
-                                   if (success) {
-	                                 compoundResult = compoundSearcher.parseCompoundResponse(response);
-                                     var imageHTML = '<img width="128" height="128" src="' + compoundResult.csURI+ '/image" title="Molecule image for ' + compoundResult.prefLabel + '">';
-                                     var hbsSource = imageHTML + moleculeArea.innerHTML;
-                                     var template = Handlebars.compile(hbsSource);
-                                     var context = {smiles: compoundResult.smiles};
-                                     var html = template(context);
-                                     $(moleculeArea).replaceWith(html);
-                                   }
-                               }
-                               var compoundSearcher = new Openphacts.CompoundSearch(ldaBaseURL, appID, appKey);
-	                           compoundSearcher.fetchCompound(result.uri, null, compoundCallback);
-                             }
-                               });
-                             } else {
-                             if (result.prefLabel.toLowerCase() === value.toLowerCase()) {
-                               found = true;
-	                           var compoundCallback=function(success, status, response){  
-                                   if (success) {
-	                                 compoundResult = compoundSearcher.parseCompoundResponse(response);
-                                     var imageHTML = '<div><img width="128" height="128" src="' + compoundResult.csURI+ '/image" title="Molecule image for ' + compoundResult.prefLabel + '"></div>';
-                                     var hbsSource = imageHTML + moleculeArea.innerHTML;
-                                     var template = Handlebars.compile(hbsSource);
-                                     var context = {smiles: compoundResult.smiles};
-                                     var html = template(context);
-                                     $(moleculeArea).replaceWith(html);
-                                   }
-                               }
-                               var compoundSearcher = new Openphacts.CompoundSearch(ldaBaseURL, appID, appKey);
-	                           compoundSearcher.fetchCompound(result.uri, null, compoundCallback);
-                             }
-                             }     
-                         });
-                       };
-                   };
-                   cwSearcher.freeText(value, 20, '4', cwCompoundCallback);
-               });
-           });
-       });
-    </script>
+    Some info about Aspirin
+    <div class="molecule-viz" data-ops-label="aspirin" style="display: none;"/><div class="compound-info" data-ops-uri="http://www.conceptwiki.org/concept/dd758846-1dac-4f0d-a329-06af9a7fa413" style="display: none;"><div>Preferred Label: {{prefLabel}}</div><div>SMILES: {{smiles}}</div><div>Inchi: {{inchi}}</div></div>
   </body>
 </html>
