--- a/index.html
+++ b/index.html
@@ -1,11 +1,160 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
+
+<head>
     <title>Widgets Test</title>
+    <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script src="./src/ops-widgets.js" type="text/javascript"></script>
-  </head>
-  <body>
-    Some info about Aspirin
-    <div class="molecule-viz" data-ops-label="aspirin" style="display: none;"/><div class="compound-info" data-ops-uri="http://www.conceptwiki.org/concept/dd758846-1dac-4f0d-a329-06af9a7fa413" style="display: none;"><div>Preferred Label: {{prefLabel}}</div><div>SMILES: {{smiles}}</div><div>Inchi: {{inchi}}</div></div>
-  </body>
+    <link type="text/css" rel="stylesheet" href="http://www.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap.min.css">
+    </style>
+    <link type="text/css" rel="stylesheet" href="./css/ops-styles.css">
+    </style>
+</head>
+
+<body>
+    <div class="compound-info" data-ops-uri="http://www.conceptwiki.org/concept/dd758846-1dac-4f0d-a329-06af9a7fa413" style="display: none;">
+        <div class="row">
+            <div class="container">
+                <div class="container-fluid large-top-spacing">
+                    <div class="row-fluid">
+                        <!--Sidebar content-->
+                        <div class="span3">
+                            <div style="padding:0 0 0 20px;background:white;">{{cs_image_src csURI}}</div>
+                            <!--box properties-->
+                            <div id="boxes" class="small-top-spacing">
+                                {{#if logp}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small>AlogP</small>
+                                        </p>
+                                        <p class="lead">{{logp}}</p>
+                                    </div>
+                                </div>
+                                {{/if}} {{#if hba}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small># H-Bond Acceptors</small>
+                                        </p>
+                                        <p class="lead">{{hba}}</p>
+                                    </div>
+                                </div>
+                                {{/if}} {{#if hbd}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small># H-Bond Donors</small>
+                                        </p>
+                                        <p class="lead">{{hbd}}</p>
+                                    </div>
+                                </div>
+                                {{/if}} {{#if fullMWT}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small>Mol Weight</small>
+                                        </p>
+                                        <p class="lead">{{fullMWT}}</p>
+                                    </div>
+                                </div>
+                                {{/if}} {{#if mwFreebase}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small>Mol Weight Freebase</small>
+                                        </p>
+                                        <p class="lead">{{mwFreebase}}</p>
+                                    </div>
+                                </div>
+                                {{/if}} {{#if psa}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small>Polar Surface Area</small>
+                                        </p>
+                                        <p class="lead">{{psa}}</p>
+                                    </div>
+                                </div>
+                                {{/if}} {{#if rtb}}
+                                <div class="summary-box">
+                                    <div class="inner-property-content">
+                                        <p><small># Rotatable Bonds</small>
+                                        </p>
+                                        <p class="lead">{{rtb}}</p>
+                                    </div>
+                                </div>
+                                {{/if}}
+
+                            </div>
+                        </div>
+
+                        <!--Body content-->
+                        <div class="span9">
+                            <!--title and formula-->
+                            <div>
+                                <div style="padding:20px 0 0 0">
+                                    <h1>{{prefLabel}}</h1>
+                                </div>
+                                <div class="lead pull-right">
+                                    <p class="pull-left">{{formatMolecularFormula molform}}</p>
+                                </div>
+                            </div>
+
+                            <!--description-->
+                            <div class="summary-descriptive-text large-top-spacing">
+                                {{#if description}}
+                                <p>{{description}}</p>
+                                {{/if}}
+                            </div>
+
+                            <!--biotransformation-->
+                            <div class="summary-descriptive-text small-top-spacing">
+                                {{#if biotransformation}}
+                                <p>{{biotransformationItem}}</p>
+                                {{/if}}
+                            </div>
+
+                            <!--details-->
+                            <div class="dl-horizontal" style="font-size:13px;">
+                                <dl>
+                                    <!--Chemspider ID-->
+                                    {{#if csURI}}
+                                    <dt class="medium-padding-top">ChemSpider ID</dt>
+                                    <dd class="medium-padding-top">{{linkableChemspiderID csURI}}</dd>
+                                    {{/if}}
+
+                                    <!--SMILES-->
+                                    {{#if smiles}}
+                                    <dt class="medium-padding-top">SMILES</dt>
+                                    <dd class="medium-padding-top">{{smiles}}</dd>
+                                    {{/if}}
+
+                                    <!--InCHL-->
+                                    {{#if inchi}}
+                                    <dt class="medium-padding-top">Standard  InChI</dt>
+                                    <dd class="medium-padding-top">{{inchi}}</dd>
+                                    {{/if}}
+
+                                    <!--InCHLKey-->
+                                    {{#if inchiKey}}
+                                    <dt class="medium-padding-top">Standard InChIKey</dt>
+                                    <dd class="medium-padding-top">{{inchiKey}}</dd>
+                                    {{/if}}
+
+                                    <!--Protein Binding-->
+                                    {{#if proteinBinding}}
+                                    <dt class="medium-padding-top">Protein Binding</dt>
+                                    <dd class="medium-padding-top">{{proteinBinding}}</dd>
+                                    {{/if}}
+
+                                    <!--Toxicity-->
+                                    {{#if toxicity}}
+                                    <dt class="medium-padding-top">Toxicity</dt>
+                                    <dd class="medium-padding-top">{{toxicity}}</dd>
+                                    {{/if}}
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
